--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
             <img id="school" src="school.png" class="img-responsive">
         </div>
         <h2>Campus life</h2>
-        
+
         <div id="campuslife" class="carousel slide">
             <div class="carousel-inner">
                 <div class="item active">
                     <center>
-                    <img src="Libary.jpg" class="img-responsive">
-                    <div class="carousel-content ">
-                        <p> <kbd>School libary</kbd></p>
-                    </div>
-                        </center>
+                        <img src="Libary.jpg" class="img-responsive">
+                        <div class="carousel-content ">
+                            <p> <kbd>School libary</kbd></p>
+                        </div>
+                    </center>
                 </div>
                 <div class="item">
                     <center>
-                    <img src="ground.jpg" class="img-responsive">
-                    <div class="carousel-content">
-                        <p> <kbd>School Ground </kbd></p>
-                    </div>
-                        </center>
+                        <img src="ground.jpg" class="img-responsive">
+                        <div class="carousel-content">
+                            <p> <kbd>School Ground </kbd></p>
+                        </div>
+                    </center>
                 </div>
                 <div class="item">
                     <center>
-                    <img src="Play%20%20area.jpg" class="img-responsive">
-                    <div class="carousel-content">
-                        <p> <kbd> Play area for kindergarden </kbd></p>
-                    </div>
+                        <img src="Play%20%20area.jpg" class="img-responsive">
+                        <div class="carousel-content">
+                            <p> <kbd> Play area for kindergarden </kbd></p>
+                        </div>
                     </center>
                 </div>
             </div>
@@ -80,36 +80,36 @@
             <a class="right carousel-control" href="#campuslife" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
         </div>
         <section id="achievements">
-     <div class="page-header" id="achievements">
-        <h2 class="text-capitalize text-left">school achievements</h2>
-    </div>
-    <div class="bg-primary movie_head text-left" data-toggle="collapse" data-target="#school_achievement1">
-       Inter School Throwball <i class="fa fa-sort-desc"></i>
-    </div>
-    <div id="school_achievement1" class="collapse">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
-            <img src="images.jpg" class="img-responsive img-thumbnail">
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
-            <h5 class="text-success text-left text-capitalize">Inter School Throwball _Runner up</h5>
-            <p>   Thowball Girls Runners Up – Impressions Sigma, Delhi Public School, Bangalore North 2018 </p>
-        </div>
- </div>
-    <br> <br>
-    <div class="bg-primary movie_head text-left" data-toggle="collapse" data-target="#school_achievement2">
-       3RD GCIS INTERSCHOOL CUP<i class="fa fa-sort-desc"></i>
-    </div>
-    <div id="school_achievement2" class="collapse">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
-            <img src="basket%20ball.jpg" class="img-responsive img-thumbnail">
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
-            <h5 class="text-success text-left text-capitalize">
-            </h5>
-            <p>Global City International School, Bangalore organized the 3rd GCIS Cup, an Interschool Soccer, Throwball and Basketball Tournament in the school premises on 26th and 27th October 2017.</p>
-        </div>
- </div>
-</section>
+            <div class="page-header" id="achievements">
+                <h2 class="text-capitalize text-left">school achievements</h2>
+            </div>
+            <div class="bg-primary movie_head text-left" data-toggle="collapse" data-target="#school_achievement1">
+                Inter School Throwball <i class="fa fa-sort-desc"></i>
+            </div>
+            <div id="school_achievement1" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+                    <img src="images.jpg" class="img-responsive img-thumbnail">
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize">Inter School Throwball _Runner up</h5>
+                    <p> Thowball Girls Runners Up – Impressions Sigma, Delhi Public School, Bangalore North 2018 </p>
+                </div>
+            </div>
+            <br> <br>
+            <div class="bg-primary movie_head text-left" data-toggle="collapse" data-target="#school_achievement2">
+                3RD GCIS INTERSCHOOL CUP<i class="fa fa-sort-desc"></i>
+            </div>
+            <div id="school_achievement2" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID">
+                    <img src="basket%20ball.jpg" class="img-responsive img-thumbnail">
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize">
+                    </h5>
+                    <p>Global City International School, Bangalore organized the 3rd GCIS Cup, an Interschool Soccer, Throwball and Basketball Tournament in the school premises on 26th and 27th October 2017.</p>
+                </div>
+            </div>
+        </section>
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="new">
             .<h2>What's New</h2>
         </div>
@@ -119,35 +119,89 @@
                 <img src="Cantteen.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">It is a like a Cafe day ,It has some shakes during the summer and some special drinks. We enjoy it ,it's really fun . </p>
             </li>
-            
+
             <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 new_li  ">
                 <h4>New Basketball court</h4>
                 <img src="school%20ground.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                 It is better and has all the marking's as it is so it is easy for us to shoot.The new hoops are nice whwn we play a macth,and there is litlle hote for small children as well. 
+                    It is better and has all the marking's as it is so it is easy for us to shoot.The new hoops are nice whwn we play a macth,and there is litlle hote for small children as well.
                 </p>
             </li>
         </ul>
         <br>
 
-    <section id="contact-us">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d7775.794104213847!2d77.66515097439881!3d12.978435913405438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d12.9818781!2d77.6650654!4m5!1s0x3bae11550b3f546d%3A0xa6a5dd52a83a8f19!2sgcis!3m2!1d12.9768586!2d77.6714854!5e0!3m2!1sen!2sin!4v1616422957909!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <hr style="width: 100%;">
-        <img src="principle.jpg" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
-        <h2> Principal Name: </h2>
-        <h3> Mrs Monica Shah </h3>
-        <div class="contact_1">
-
-            <a href="mailto:my@gmail.com?Subject=Hi">
-                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;schoolgmailid@gmail.com</h5>
-            </a>
-
-            <a href="#">
-                <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;schoolinstagramid</h5>
-            </a>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="alumni">
+            <h2> Our Alumni</h2>
         </div>
-    </section>
-    </div>
-</body>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#school_alumni">
+            <img src="319946.png" class="img-responsive alumni">
+            <hr>
+            <p class="text-primary">M.S Dhoni</p>
+        </div>
+        <div class="modal fade" id="school_alumni">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">MS Dhoni</h4>
+                    </div>
 
-</html>
+                    <div class="modal-body">
+                        <img src="319946.png" class="img-responsive img_modal">
+                        <p class="p_modal">
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/MS_Dhoni"><B>To know ore about dhoni click here</B></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#school_alumni1">
+            <img src="raphel.jpg" class="img-responsive alumni">
+            <hr>
+            <p class="text-primary"> Rafael Nadal</p>
+        </div>
+        <div class="modal fade" id="school_alumni1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title"> Rafael Nadal </h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <img src="raphel.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">
+                            <br>
+                            <a href="https://en.wikipedia.org/wiki/Rafael_Nadal"><B>To know ore about Rafael click here</B></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <section id="contact-us">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d7775.794104213847!2d77.66515097439881!3d12.978435913405438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d12.9818781!2d77.6650654!4m5!1s0x3bae11550b3f546d%3A0xa6a5dd52a83a8f19!2sgcis!3m2!1d12.9768586!2d77.6714854!5e0!3m2!1sen!2sin!4v1616422957909!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <hr style="width: 100%;">
+            <img src="principle.jpg" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
+            <h2> Principal Name: </h2>
+            <h3> Mrs Monica Shah </h3>
+            <div class="contact_1">
+
+                <a href="mailto:my@gmail.com?Subject=Hi">
+                    <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;schoolgmailid@gmail.com</h5>
+                </a>
+
+                <a href="#">
+                    <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;schoolinstagramid</h5>
+                </a>
+            </div>
+        </section>
+    </div>
+    <div id="footer"></div>
+</body></html>
